--- a/utility.css
+++ b/utility.css
@@ -56,3 +56,22 @@
     gap: 5px;
     width: 95px;
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(41, 41, 41);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(66, 66, 66);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(92, 92, 92);
+}
